<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:title="@string/app_name">
            <menu>
                <item
                    android:id="@+id/addLoc"
                    android:title="@string/anadir_loc"
                    android:icon="@drawable/ic_coche"
                    >
                </item>

                <item
                    android:id="@+id/shareLoc"
                    android:title="@string/compartir_loc"
                    android:icon="@drawable/ic_share_black_24dp">
                </item>

                <item
                    android:id="@+id/itemImage"
                    android:title="@string/see_image"
                    android:icon="@drawable/ic_photo_camera_black_24dp">
                </item>

                <item
                    android:id="@+id/delete"
                    android:title="@string/borrar"
                    android:icon="@drawable/ic_delete_black_24dp">
                </item>

            </menu>

        </item>

    </group>

    <item android:title="@string/favorites_group">
        <menu>
            <item
                android:id="@+id/addFavorites"
                android:title="@string/add_fav"
                android:icon="@drawable/ic_favorite_black_24dp">
            </item>

            <item
                android:id="@+id/readUbications"
                android:title="@string/get_back"
                android:icon="@drawable/ic_loyalty_black_24dp">
            </item>

        </menu>

    </item>

</menu>